--- a/week 1/styles.css
+++ b/week 1/styles.css
@@ -137,3 +137,12 @@ form input[type="submit"] {
 form input[type="submit"]:hover {
     background-color: #555;
 }
+.errorMessage{
+    font-size: 10px;
+    font-weight: 100;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border: none;
+    border-radius: 10px;
+    color: red;
+    display: none;
+}
